# Heterogeneous-Nvidia-CUDA-Intel-OpenCL

./: CMakeLists.txt  README.md  main.cu  vecAdd.cu  vecAdd.cuh
